# code-generator

./: .gitignore  README.md  mkdocs.yml  pyproject.toml  requirements-docs.txt
.github/workflows/: docs.yml
docs/: DURUM.md  PROJE_RAPORU.md  index.md  task_plan.md
docs/stylesheets/: extra.css
orchestrator/: __main__.py  agents.py  api.py  calisma_alani.py  fullstack_runner.py  git_deposu.py  gorsel.py  indeks.py  llm_client.py  loop.py  playbook.py  proje.py  state.py  sunucu.py  tasarim.py  tool_executor.py
tests/: test_api.py  test_calisma_alani.py  test_check_page.py  test_docker_sandbox.py  test_fullstack_runner.py  test_git_ve_token.py  test_indeks.py  test_orchestrator.py  test_playbook.py  test_proje.py  test_sunucu.py  test_tasarim.py  test_tool_executor.py  test_tool_use_consistency.py
ui/: next.config.ts  package-lock.json  package.json
ui/app/: globals.css  hero.module.css  layout.tsx  page.module.css  page.tsx
ui/app/panel/: page.module.css  page.tsx
